fixed csv rotations

--- a/generateTrials/test.ipynb
+++ b/generateTrials/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -416,6 +416,451 @@
    "outputs": [],
    "source": [
     "merged_df.to_csv('trials.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pd = pd.read_csv('trials.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['rotation_1', 'rotation_2', 'rotation_3', 'rotation_4', 'rotation_5', 'rotation_6', 'rotation_7', 'rotation_8', 'rotation_9', 'rotation_10', 'rotation_11', 'rotation_12', 'rotation_13', 'rotation_14', 'rotation_15', 'rotation_16', 'rotation_17', 'rotation_18', 'rotation_19', 'rotation_20', 'rotation_21', 'rotation_22', 'rotation_23', 'rotation_24', 'rotation_25', 'rotation_26', 'rotation_27', 'rotation_28', 'rotation_29', 'rotation_30', 'rotation_31', 'rotation_32', 'rotation_33', 'rotation_34', 'rotation_35']\n",
+      "[39, 40, 41, 42, 43, 44, 45, 46, 47, 48, 49, 50, 51, 52, 53, 54, 55, 56, 57, 58, 59, 60, 61, 62, 63, 64, 65, 66, 67, 68, 69, 70, 71, 72, 73]\n"
+     ]
+    }
+   ],
+   "source": [
+    "rotation_columns = [col for col in pd.columns if col.startswith('rotation')]\n",
+    "rotation_columns_index = [pd.columns.get_loc(col) for col in rotation_columns]\n",
+    "\n",
+    "print(rotation_columns)\n",
+    "print(rotation_columns_index)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "vscode": {
+     "languageId": "javascript"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "pd.iloc[:, 39:74] = pd.iloc[:, 39:74].fillna(0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {
+    "vscode": {
+     "languageId": "javascript"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>rotation_1</th>\n",
+       "      <th>rotation_2</th>\n",
+       "      <th>rotation_3</th>\n",
+       "      <th>rotation_4</th>\n",
+       "      <th>rotation_5</th>\n",
+       "      <th>rotation_6</th>\n",
+       "      <th>rotation_7</th>\n",
+       "      <th>rotation_8</th>\n",
+       "      <th>rotation_9</th>\n",
+       "      <th>rotation_10</th>\n",
+       "      <th>...</th>\n",
+       "      <th>rotation_26</th>\n",
+       "      <th>rotation_27</th>\n",
+       "      <th>rotation_28</th>\n",
+       "      <th>rotation_29</th>\n",
+       "      <th>rotation_30</th>\n",
+       "      <th>rotation_31</th>\n",
+       "      <th>rotation_32</th>\n",
+       "      <th>rotation_33</th>\n",
+       "      <th>rotation_34</th>\n",
+       "      <th>rotation_35</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>270.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>90.0</td>\n",
+       "      <td>90.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>180.0</td>\n",
+       "      <td>90.0</td>\n",
+       "      <td>180.0</td>\n",
+       "      <td>180.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>90.0</td>\n",
+       "      <td>180.0</td>\n",
+       "      <td>180.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>180.0</td>\n",
+       "      <td>90.0</td>\n",
+       "      <td>270.0</td>\n",
+       "      <td>90.0</td>\n",
+       "      <td>90.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>90.0</td>\n",
+       "      <td>180.0</td>\n",
+       "      <td>180.0</td>\n",
+       "      <td>180.0</td>\n",
+       "      <td>180.0</td>\n",
+       "      <td>90.0</td>\n",
+       "      <td>90.0</td>\n",
+       "      <td>180.0</td>\n",
+       "      <td>90.0</td>\n",
+       "      <td>270.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>180.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>180.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>180.0</td>\n",
+       "      <td>180.0</td>\n",
+       "      <td>90.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>90.0</td>\n",
+       "      <td>270.0</td>\n",
+       "      <td>180.0</td>\n",
+       "      <td>270.0</td>\n",
+       "      <td>270.0</td>\n",
+       "      <td>90.0</td>\n",
+       "      <td>90.0</td>\n",
+       "      <td>180.0</td>\n",
+       "      <td>270.0</td>\n",
+       "      <td>90.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>90.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>90.0</td>\n",
+       "      <td>90.0</td>\n",
+       "      <td>270.0</td>\n",
+       "      <td>90.0</td>\n",
+       "      <td>90.0</td>\n",
+       "      <td>180.0</td>\n",
+       "      <td>180.0</td>\n",
+       "      <td>270.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>180.0</td>\n",
+       "      <td>270.0</td>\n",
+       "      <td>90.0</td>\n",
+       "      <td>90.0</td>\n",
+       "      <td>90.0</td>\n",
+       "      <td>270.0</td>\n",
+       "      <td>180.0</td>\n",
+       "      <td>180.0</td>\n",
+       "      <td>270.0</td>\n",
+       "      <td>270.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>180.0</td>\n",
+       "      <td>270.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>90.0</td>\n",
+       "      <td>180.0</td>\n",
+       "      <td>270.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>270.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>180.0</td>\n",
+       "      <td>270.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>180.0</td>\n",
+       "      <td>270.0</td>\n",
+       "      <td>90.0</td>\n",
+       "      <td>180.0</td>\n",
+       "      <td>270.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>180.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>270.0</td>\n",
+       "      <td>90.0</td>\n",
+       "      <td>270.0</td>\n",
+       "      <td>180.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>90.0</td>\n",
+       "      <td>180.0</td>\n",
+       "      <td>180.0</td>\n",
+       "      <td>270.0</td>\n",
+       "      <td>180.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>139</th>\n",
+       "      <td>90.0</td>\n",
+       "      <td>270.0</td>\n",
+       "      <td>180.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>90.0</td>\n",
+       "      <td>270.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>180.0</td>\n",
+       "      <td>270.0</td>\n",
+       "      <td>180.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>140</th>\n",
+       "      <td>180.0</td>\n",
+       "      <td>180.0</td>\n",
+       "      <td>90.0</td>\n",
+       "      <td>90.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>180.0</td>\n",
+       "      <td>270.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>270.0</td>\n",
+       "      <td>270.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>141</th>\n",
+       "      <td>180.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>90.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>270.0</td>\n",
+       "      <td>90.0</td>\n",
+       "      <td>90.0</td>\n",
+       "      <td>90.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>142</th>\n",
+       "      <td>180.0</td>\n",
+       "      <td>270.0</td>\n",
+       "      <td>180.0</td>\n",
+       "      <td>270.0</td>\n",
+       "      <td>270.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>180.0</td>\n",
+       "      <td>270.0</td>\n",
+       "      <td>270.0</td>\n",
+       "      <td>90.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>143</th>\n",
+       "      <td>90.0</td>\n",
+       "      <td>90.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>270.0</td>\n",
+       "      <td>270.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>90.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>144 rows × 35 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     rotation_1  rotation_2  rotation_3  rotation_4  rotation_5  rotation_6  \\\n",
+       "0           0.0       270.0         0.0        90.0        90.0         0.0   \n",
+       "1          90.0       180.0       180.0       180.0       180.0        90.0   \n",
+       "2          90.0       270.0       180.0       270.0       270.0        90.0   \n",
+       "3         180.0       270.0        90.0        90.0        90.0       270.0   \n",
+       "4         180.0       270.0         0.0       180.0       270.0        90.0   \n",
+       "..          ...         ...         ...         ...         ...         ...   \n",
+       "139        90.0       270.0       180.0         0.0        90.0       270.0   \n",
+       "140       180.0       180.0        90.0        90.0         0.0       180.0   \n",
+       "141       180.0         0.0        90.0         0.0       270.0        90.0   \n",
+       "142       180.0       270.0       180.0       270.0       270.0         0.0   \n",
+       "143        90.0        90.0         0.0         0.0       270.0       270.0   \n",
+       "\n",
+       "     rotation_7  rotation_8  rotation_9  rotation_10  ...  rotation_26  \\\n",
+       "0         180.0        90.0       180.0        180.0  ...         90.0   \n",
+       "1          90.0       180.0        90.0        270.0  ...        180.0   \n",
+       "2          90.0       180.0       270.0         90.0  ...         90.0   \n",
+       "3         180.0       180.0       270.0        270.0  ...        180.0   \n",
+       "4         180.0       270.0         0.0        180.0  ...        270.0   \n",
+       "..          ...         ...         ...          ...  ...          ...   \n",
+       "139         0.0       180.0       270.0        180.0  ...          0.0   \n",
+       "140       270.0         0.0       270.0        270.0  ...          0.0   \n",
+       "141        90.0        90.0         0.0          0.0  ...          0.0   \n",
+       "142       180.0       270.0       270.0         90.0  ...          0.0   \n",
+       "143         0.0         0.0         0.0         90.0  ...          0.0   \n",
+       "\n",
+       "     rotation_27  rotation_28  rotation_29  rotation_30  rotation_31  \\\n",
+       "0          180.0        180.0          0.0        180.0         90.0   \n",
+       "1            0.0        180.0          0.0        180.0        180.0   \n",
+       "2            0.0         90.0         90.0        270.0         90.0   \n",
+       "3          270.0          0.0          0.0         90.0        180.0   \n",
+       "4           90.0        270.0        180.0          0.0         90.0   \n",
+       "..           ...          ...          ...          ...          ...   \n",
+       "139          0.0          0.0          0.0          0.0          0.0   \n",
+       "140          0.0          0.0          0.0          0.0          0.0   \n",
+       "141          0.0          0.0          0.0          0.0          0.0   \n",
+       "142          0.0          0.0          0.0          0.0          0.0   \n",
+       "143          0.0          0.0          0.0          0.0          0.0   \n",
+       "\n",
+       "     rotation_32  rotation_33  rotation_34  rotation_35  \n",
+       "0          270.0         90.0         90.0          0.0  \n",
+       "1           90.0          0.0          0.0          0.0  \n",
+       "2           90.0        180.0        180.0        270.0  \n",
+       "3          270.0          0.0          0.0        270.0  \n",
+       "4          180.0        180.0        270.0        180.0  \n",
+       "..           ...          ...          ...          ...  \n",
+       "139          0.0          0.0          0.0          0.0  \n",
+       "140          0.0          0.0          0.0          0.0  \n",
+       "141          0.0          0.0          0.0          0.0  \n",
+       "142          0.0          0.0          0.0          0.0  \n",
+       "143          0.0          0.0          0.0          0.0  \n",
+       "\n",
+       "[144 rows x 35 columns]"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.iloc[:, 39:74]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {
+    "vscode": {
+     "languageId": "javascript"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "pd.to_csv('trials.csv', index=False)"
    ]
   }
  ],
